connection info - style align fix

--- a/app/public/app.css
+++ b/app/public/app.css
@@ -247,7 +247,7 @@ html, body {
 
 .extra-info {
     top: 165px!important;
-    left: 70px!important;
+    left: 80px!important;
     color: #cdcccc;
     font-style: italic;
     font-size: 14px;
